--- a/html/index.html
+++ b/html/index.html
@@ -14,11 +14,9 @@
 
         <!-- opcional - link - importar arquivos ou código externo para nossa página -->
         <link rel="icon" href="images\pericles2.png">
-
     </head>
     <body>
         <!-- Tudo que aparecera no site (corpo da pagina) -->
-
         <!-- H1 > H6 - Hierarquia de títulos -->
         <a href="#"><h1>Hello World!</h1></a>
         <h2>Hello World!</h2>
@@ -26,6 +24,11 @@
         <h4>Hello World!</h4>
         <h5>Hello World!</h5>
         <h6>Hello World!</h6>
+
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="tables.html">tabelas</a></li>
+        </ul>
 
         <!-- p - Paragrafo -->
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br /> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -74,7 +77,7 @@
         <!-- type - A, a, i, I, 1 /// start="10" -->
         <!-- reversed="true" -->
         <ol type="1" start="10" reversed="true">
-            <li>>Felipe</a></li>
+            <li>Felipe</a></li>
             <li>Rafael</li>
             <li>Tiago</li>
         </ol>
