--- a/html/index.html
+++ b/html/index.html
@@ -13,15 +13,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <!-- opcional - link - importar arquivos ou código externo para nossa página -->
-        <link rel="icon" href="images\pericles2.png">
+        <link rel="icon" href="images\pericles2.png" />
+
+        <!-- CSS Externo -->
+        <link rel="stylesheet" href="css\styles.css" />
+
+        <!-- CSS Interno -->
+        <style>
+            p {
+                border: 3px solid green;
+            }
+        </style>
     </head>
     <body>
         <!-- Tudo que aparecera no site (corpo da pagina) -->
         <!-- H1 > H6 - Hierarquia de títulos -->
-        <a href="#"><h1>Hello World!</h1></a>
-        <h2>Hello World!</h2>
+        <h1 class="fonte-italico borda-cinza">Hello World!</h1>
+        <h2 class="fonte-italico fundo-escuro">Hello World!</h2>
         <h3>Hello World!</h3>
-        <h4>Hello World!</h4>
+        <h4 class="fonte-italico">Hello World!</h4>
         <h5>Hello World!</h5>
         <h6>Hello World!</h6>
 
@@ -32,10 +42,10 @@
             </ul>
         </div>
 
-        <div id="pageContent">
+        <div id="pageContent" >
             <div>
                 <!-- p - Paragrafo -->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br /> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p style="background-color: #444;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br /> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
 
             <!-- hr - Breakline, quebra de linha -->
