css styling fonts

--- a/html/index.html
+++ b/html/index.html
@@ -12,18 +12,17 @@
         <meta name="author" contet="Gustavo Riquena" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <!-- Pegando fonte do google API -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+
         <!-- opcional - link - importar arquivos ou código externo para nossa página -->
         <link rel="icon" href="images\pericles2.png" />
 
         <!-- CSS Externo -->
         <link rel="stylesheet" href="css\styles.css" />
 
-        <!-- CSS Interno -->
-        <style>
-            p {
-                border: 3px solid green;
-            }
-        </style>
     </head>
     <body>
         <!-- Tudo que aparecera no site (corpo da pagina) -->
@@ -42,10 +41,10 @@
             </ul>
         </div>
 
-        <div id="pageContent" >
+        <div id="pageContent">
             <div>
                 <!-- p - Paragrafo -->
-                <p style="background-color: #444;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br /> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>A Marvel Comics é uma editora norte-americana de mídias relacionadas. Hoje a Marvel Comics é considerada a maior editora de histórias em quadrinhos do mundo. Em 2009, a The Walt Disney Company, adquiriu a Marvel Entertainment, a empresa mãe da Marvel</p>
             </div>
 
             <!-- hr - Breakline, quebra de linha -->
@@ -53,18 +52,18 @@
             <br />
             <hr />
 
-            <p>Lorem ipsum dolor sit amet,<b> consectetur adipisicing elit, </b>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <a href="#">ullamco</a> laboris nisi ut aliquip ex ea <mark>commodo consequat</mark>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><span class="texto-italico">Lorem ipsum dolor sit amet</span>,<span class="texto-negrito"> consectetur adipisicing elit, </span>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <a href="#">ullamco</a> laboris nisi ut aliquip ex ea <span class="texto-marcado">commodo consequat</span>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
         <div id="divTextFormatters">
             <!-- Tags de formatação - NÃO UTILIZAR -->
-            <br /><b>Bold - negrito</b>
-            <br /><i>Italic - itálico</i>
-            <br /><sub>Texto para baixo</sub><sup>Texto para cima</sup>
-            <br /><small>Texto pequeno</small> Texto normal
-            <br /><del>Risca</del>
-            <br /><ins>Underline</ins>
-            <br /><mark>marca textos</mark>
+            <br /><span class="texto-negrito">Bold - negrito</span>
+            <br /><span class="texto-italico">Italic - itálico</span>
+            <br /><span class="texto-pequeno">Texto para baixo</span> Texto para cima
+            <br /><span class="texto-pequeno">Texto pequeno</span> Texto normal
+            <br /><span class="texto-riscado">Risca</span>
+            <br /><span class="texto-sublinhado">Underline</span>
+            <br /><span class="texto-marcado">marca textos</span>
         </div>
 
         <!-- Span -->
