css exercices and inAwards ex

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-
         <!-- opcional - link - importar arquivos ou código externo para nossa página -->
         <link rel="icon" href="images\pericles2.png" />
 
@@ -27,12 +26,14 @@
     <body>
         <!-- Tudo que aparecera no site (corpo da pagina) -->
         <!-- H1 > H6 - Hierarquia de títulos -->
-        <h1 class="fonte-italico borda-cinza">Hello World!</h1>
-        <h2 class="fonte-italico fundo-escuro">Hello World!</h2>
-        <h3>Hello World!</h3>
-        <h4 class="fonte-italico">Hello World!</h4>
-        <h5>Hello World!</h5>
-        <h6>Hello World!</h6>
+
+        <header>
+            <div id="divHeader">
+                <h1 class="">Titulo da pagina</h1>
+            </div>
+        </header>
+
+
 
         <div id="divMenu">
             <ul>
@@ -41,7 +42,8 @@
             </ul>
         </div>
 
-        <div id="pageContent">
+        <div id="pageContentImage">
+            <div id="pageContentBlur" class="text-overlay">
             <div>
                 <!-- p - Paragrafo -->
                 <p>A Marvel Comics é uma editora norte-americana de mídias relacionadas. Hoje a Marvel Comics é considerada a maior editora de histórias em quadrinhos do mundo. Em 2009, a The Walt Disney Company, adquiriu a Marvel Entertainment, a empresa mãe da Marvel</p>
@@ -50,9 +52,37 @@
             <!-- hr - Breakline, quebra de linha -->
             <!-- hr - Cria linha horizontal -->
             <br />
-            <hr />
 
-            <p><span class="texto-italico">Lorem ipsum dolor sit amet</span>,<span class="texto-negrito"> consectetur adipisicing elit, </span>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <a href="#">ullamco</a> laboris nisi ut aliquip ex ea <span class="texto-marcado">commodo consequat</span>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcolaboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+
+        <div id="pageContent" class="text-overlay">
+            <div>
+                <!-- p - Paragrafo -->
+                <p>A Marvel Comics é uma editora norte-americana de mídias relacionadas. Hoje a Marvel Comics é considerada a maior editora de histórias em quadrinhos do mundo. Em 2009, a The Walt Disney Company, adquiriu a Marvel Entertainment, a empresa mãe da Marvel</p>
+            </div>
+
+            <!-- hr - Breakline, quebra de linha -->
+            <!-- hr - Cria linha horizontal -->
+            <br />
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcolaboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+        <div id="pageContentImage">
+            <div id="pageContentBlur" class="text-overlay">
+            <div>
+                <!-- p - Paragrafo -->
+                <p>A Marvel Comics é uma editora norte-americana de mídias relacionadas. Hoje a Marvel Comics é considerada a maior editora de histórias em quadrinhos do mundo. Em 2009, a The Walt Disney Company, adquiriu a Marvel Entertainment, a empresa mãe da Marvel</p>
+            </div>
+
+            <!-- hr - Breakline, quebra de linha -->
+            <!-- hr - Cria linha horizontal -->
+            <br />
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamcolaboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
         </div>
 
         <div id="divTextFormatters">
