css links, navbar creation and hover

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
         <!-- opcional - link - importar arquivos ou código externo para nossa página -->
         <link rel="icon" href="images\pericles2.png" />
 
@@ -28,19 +30,32 @@
         <!-- H1 > H6 - Hierarquia de títulos -->
 
         <header>
+            <nav>
+                <div id="divMenu">
+                    <ul>
+                        <li><a href="index.html"><i class="fas fa-home"></i> home</a></li>
+                        <li><a href="tables.html"><i class="fas fa-table"></i> tabelas</a></li>
+                        <li><a href="forms.html"><i class="fas fa-envelope"></i> Forms</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="media.html">Media</a></li>
+                    </ul>
+                </div>
+            </nav>
+
             <div id="divHeader">
                 <h1 class="">Titulo da pagina</h1>
             </div>
         </header>
 
 
-
-        <div id="divMenu">
+        <div id="minhaLista">
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="tables.html">tabelas</a></li>
+                <li>Felipe</a></li>
+                <li>Rafael</li>
+                <li>Tiago</li>
             </ul>
         </div>
+
 
         <div id="pageContentImage">
             <div id="pageContentBlur" class="text-overlay">
@@ -123,17 +138,14 @@
 
         <!-- type - A, a, i, I, 1 /// start="10" -->
         <!-- reversed="true" -->
-        <ol type="1" start="10" reversed="true">
+        <ol>
             <li>Felipe</a></li>
             <li>Rafael</li>
             <li>Tiago</li>
         </ol>
 
-        <ul>
-            <li>Karina</li>
-            <li>Ana</li>
-            <li>Vinicius</li>
-        </ul>
+
+
 
         <!-- dl - description list -->
         <!-- dt - description title -->
