--- a/html/forms.html
+++ b/html/forms.html
@@ -16,6 +16,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+
+        <!-- PRONUNCIA SEGUNDO FABIO - Also Michels ou Awesome Michaels -->
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
         <!-- opcional - link - importar arquivos ou código externo para nossa página -->
@@ -44,6 +46,61 @@
                 <h1 class="">Titulo da pagina</h1>
             </div>
         </header>
+
+
+        <section id="sectionForm">
+            <form id="formLogin">
+
+                <div class="input-group">
+                    <label for="txtName">Name: </label>
+                    <input type="text" id="txtName" maxlength="30" size="40" placeholder="Digite aqui seu nome" />
+                </div>
+
+                <div class="input-group">
+                    <label for="txtEmail">Email: </label>
+                    <input type="email" id="txtEmail" />
+                </div>
+
+                <div class="input-group">
+                    <label for="txtPassword">Password: </label>
+                    <input type="password" id="txtPassword" />
+                </div>
+
+                <div class="buttons-group">
+                    <button type="reset">
+                        <i class="fas fa-window-close"></i> Cancelar
+                    </button>
+
+                    <button type="submit">
+                        <i class="fas fa-paper-plane"></i> Enviar
+                    </button>
+                </div>
+
+            </form>
+        </section>
+
+        <section id="sectionForm">
+            <form id="formLogin">
+
+                <div class="input-group-2">
+                    <label for="txtName">Name: </label>
+                    <input type="text" id="txtName" maxlength="30" size="40" placeholder="Digite aqui seu nome" />
+                </div>
+
+                <div class="input-group-2">
+                    <label for="txtEmail">Email: </label>
+                    <input type="email" id="txtEmail" />
+                </div>
+
+                <div class="input-group-2">
+                    <label for="txtPassword">Password: </label>
+                    <input type="password" id="txtPassword" />
+                </div>
+
+            </form>
+        </section>
+
+
 
         <!-- form - demarca o formulário -->
         <!-- action - destino dos dados / method - get - pela url, post - headers -->
