--- a/html/tables.html
+++ b/html/tables.html
@@ -49,65 +49,67 @@
             <p>NÃO COLOCAR CONTEÚDO A+ DO QUE ESTÁ SENDO PASSADO EM AULA</p>
         </details>
 
-
-        <h1>TABELAS EM HTML</h1>
-
         <!-- tabela em HTML -->
         <!-- atributos tabela -->
         <!-- colspan - quantidade de colunas a ocupar -->
         <!-- rowspan - quantidade de linhas que uma célula irá ocupar -->
-        <table>
-            <caption>Titulo da tabela</caption>
 
-            <!-- header da tabela -->
-            <thead>
-                <!-- tr - table row -->
-                <tr>
-                    <!-- th - table header -->
-                    <th>Produto</th>
-                    <th>Preço</th>
-                    <th>Qtd. Vendas</th>
-                </tr>
-            </thead>
+        <section id="secaoTabela">
+            <table id="tabelaBordas">
+                <caption>Titulo da tabela</caption>
 
-            <!-- corpo (estrutura principal) -->
-            <tbody>
-                <tr>
-                    <!-- td - table data -->
-                    <td>Teclado</td>
-                    <td>R$ 300</td>
-                    <td>100</td>
-                </tr>
+                <!-- header da tabela -->
+                <thead>
+                    <!-- tr - table row -->
+                    <tr>
+                        <!-- th - table header -->
+                        <th>Produto</th>
+                        <th>Preço</th>
+                        <th>Qtd. Vendas</th>
+                    </tr>
+                </thead>
 
-                <tr>
-                    <!-- td - table data -->
-                    <td>Mouse</td>
-                    <td>R$ 20</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <!-- td - table data -->
-                    <td>Mouse</td>
-                    <td>R$ 20</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <!-- td - table data -->
-                    <td>Mouse</td>
-                    <td>R$ 20</td>
-                    <td>100</td>
-                </tr>
-            </tbody>
+                <!-- corpo (estrutura principal) -->
+                <tbody>
+                    <tr>
+                        <!-- td - table data -->
+                        <td>Teclado</td>
+                        <td>R$ 300</td>
+                        <td>100</td>
+                    </tr>
 
-            <!-- rodapé (conclusão, soma, filtros, etc) -->
-            <tfoot>
-                <tr>
-                    <th>Total</th>
-                    <th>R$ 320</th>
-                    <th>400</th>
-                </tr>
-            </tfoot>
-        </table>
+                    <tr>
+                        <!-- td - table data -->
+                        <td>Mouse</td>
+                        <td>R$ 20</td>
+                        <td>100</td>
+                    </tr>
+                    <tr>
+                        <!-- td - table data -->
+                        <td>Mouse</td>
+                        <td>R$ 20</td>
+                        <td>100</td>
+                    </tr>
+                    <tr>
+                        <!-- td - table data -->
+                        <td>Mouse</td>
+                        <td>R$ 20</td>
+                        <td>100</td>
+                    </tr>
+                </tbody>
+
+                <!-- rodapé (conclusão, soma, filtros, etc) -->
+                <tfoot>
+                    <tr>
+                        <th>Total</th>
+                        <th>R$ 320</th>
+                        <th>400</th>
+                    </tr>
+                </tfoot>
+            </table>
+        </section>
+
+
 
         <br />
 
