creating baseStyle lib css

--- a/html/forms.html
+++ b/html/forms.html
@@ -58,12 +58,12 @@
 
                 <div class="input-group">
                     <label for="txtEmail">Email: </label>
-                    <input type="email" id="txtEmail" />
+                    <input type="email" id="txtEmail" placeholder="digite seu email" />
                 </div>
 
                 <div class="input-group">
                     <label for="txtPassword">Password: </label>
-                    <input type="password" id="txtPassword" />
+                    <input type="password" id="txtPassword" placeholder="sua senha" />
                 </div>
 
                 <div class="buttons-group">
